--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hola Mundo</title>
+    <title >Bienvenido a Inventarios en SAP UI5
+    </title>
     <style>
         html, body, body > div, #container, #container-uiarea {
             height: 100%;
